--- a/LotoResultsViewer/Views/MainWindow.xaml
+++ b/LotoResultsViewer/Views/MainWindow.xaml
@@ -23,7 +23,8 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="15*"/>
                 <RowDefinition Height="15*"/>
-                <RowDefinition Height="400*"/>
+                <RowDefinition Height="100*"/>
+                <RowDefinition Height="300*"/>
             </Grid.RowDefinitions>
 
             <ComboBox Grid.Row="0" 
@@ -37,7 +38,15 @@
                       SelectedItem="{Binding SelectedGameType, UpdateSourceTrigger=PropertyChanged}"
                       />
 
-            <ListBox Grid.Row="2" x:Name="ResultArchiveGrid">
+            <TreeView Grid.Row="2" ItemsSource="{Binding GameResultArchive}">
+                <TreeView.ItemTemplate>
+                    <HierarchicalDataTemplate ItemsSource="{Binding GameResult}">
+                        <TextBlock Text="{Binding GameResult[JackpotSum]}"/>
+                    </HierarchicalDataTemplate>
+                </TreeView.ItemTemplate>
+            </TreeView>
+
+            <ListBox Grid.Row="4" x:Name="ResultArchiveGrid">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid>
